gcc/testsuite/rust/rustc/ui/suggestions/issue-89640_dg.rs
fn main() {
    le t x: i32 = 3; // { dg-error "" "" { target *-*-* } }
}

